--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Improving School Wifi</title>
+    <link rel="icon" href="favicon.ico" type="ico">
+
 </head>
 
 <body>
