edit vid/aud link

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ video recording of the meeting
         <summary>More Details about this meeting</summary>
         <p>Watch this video for explanation to everything</p>
         <video width="400" controls>
-            <source src="/media/vid1.mp4" type="video/mp4">
+            <source src="media/vid1.mp4" type="video/mp4">
         </video>
     </details>
 
@@ -267,7 +267,7 @@ video recording of the meeting
     <section id="graph-section">
         <h2> - 6. Graph Section - </h2>
         <h3>This is what our wifi looks like</h3>
-        <img src="/media/img1.jpg" alt="Wifi Meme" width="400">
+        <img src="media/img1.jpg" alt="Wifi Meme" width="400">
 
         <h3>This is our solution</h3>
         <p>
@@ -292,7 +292,7 @@ video recording of the meeting
             <li>
                 Video Recording of the meeting
                 <video width="400" controls >
-                    <source src="/media/meeting.mp4" type="video/mp4">
+                    <source src="media/meeting.mp4" type="video/mp4">
                 </video>
 
             </li>
