--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Improving School Wifi</title>
-    <link rel="icon" href="favicon.ico" type="ico">
+    <link rel="icon" href="favicon.ico">
 
 </head>
 
