--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Improving School Wifi</title>
     <link rel="icon" href="favicon.ico">
+    <link rel="stylesheet" href="/css/styles.css">
 
 </head>
 
