add some ugly background colors

--- a/index.html
+++ b/index.html
@@ -46,6 +46,18 @@ video recording of the meeting
     <hr>
 
     <nav>
+        <ul>
+            <li><a href="#attendence-section">Attendence</a></li>
+            <li><a href="#agenda-section">Agenda</a></li>
+            <li><a href="#action-section">Action</a></li>
+            <li><a href="#topic-section">Topic</a></li>
+            <li><a href="#misc-section">Misc</a></li>
+            <li><a href="#graph-section">Today's Topic</a></li>
+            <li><a href="#meeting-records">Meeting Recordings</a></li>
+        </ul>
+    </nav>
+
+    <nav>
         <h2>Table of Contents</h2>
         <table>
             <tr>
@@ -292,7 +304,7 @@ video recording of the meeting
 
             <li>
                 Video Recording of the meeting
-                <video width="400" controls >
+                <video width="400" controls>
                     <source src="media/meeting.mp4" type="video/mp4">
                 </video>
 
