fix font and some background

--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@ video recording of the meeting
 
 
     <hr>
+    <h2>Table of Contents</h2>
 
     <nav>
-        <ul>
+        <ol>
             <li><a href="#attendence-section">Attendence</a></li>
             <li><a href="#agenda-section">Agenda</a></li>
             <li><a href="#action-section">Action</a></li>
@@ -54,61 +55,16 @@ video recording of the meeting
             <li><a href="#misc-section">Misc</a></li>
             <li><a href="#graph-section">Today's Topic</a></li>
             <li><a href="#meeting-records">Meeting Recordings</a></li>
-        </ul>
+        </ol>
     </nav>
 
-    <nav>
-        <h2>Table of Contents</h2>
-        <table>
-            <tr>
-                <th>Part 1 </th>
-                <th>Attendence</th>
-                <th><a href="#attendence-section">jump</a></th>
-            </tr>
 
-            <tr>
-                <th>Part 2 </th>
-                <th>Agenda</th>
-                <th><a href="#agenda-section">jump</a></th>
-            </tr>
 
-            <tr>
-                <th>Part 3 </th>
-                <th>Previous Action Item</th>
-                <th><a href="#action-section">jump</a></th>
-            </tr>
-
-            <tr>
-                <th>Part 4 </th>
-                <th>Today's Topic</th>
-                <th><a href="#topic-section">jump</a></th>
-            </tr>
-
-            <tr>
-                <th>Part 5 </th>
-                <th>Misc</th>
-                <th><a href="#misc-section">jump</a></th>
-            </tr>
-
-            <tr>
-                <th>Part 6 </th>
-                <th>Graphs</th>
-                <th><a href="#graph-section">jump</a></th>
-            </tr>
-
-            <tr>
-                <th>Part 7</th>
-                <th>Meeting Records</th>
-                <th><a href="#meeting-records">jump</a></th>
-            </tr>
-
-        </table>
-    </nav>
 
     <hr>
 
 
-    <section id="attendence-section">
+    <section id="attendence-section" class="content">
         <h2> - 1. Attendence - </h2>
 
         <h3> (1) Honorable Guests: </h3>
@@ -165,7 +121,7 @@ video recording of the meeting
     <!-- ******** ****************** ****************** ****************** ********************** -->
     <hr>
 
-    <section id="agenda-section">
+    <section id="agenda-section" class="content">
         <h2> - 2. Agenda - </h2>
         <ol>
             <li>Action Items from <i>last meeting (9/19/21)</i></li>
@@ -176,7 +132,7 @@ video recording of the meeting
     </section>
 
     <hr>
-    <section id="action-section">
+    <section id="action-section" class="content">
         <h2> - 3. Action Items - </h2>
         <ol>
             <li>Announce the start of school</li>
@@ -199,7 +155,7 @@ video recording of the meeting
 
 
     <hr>
-    <section id="topic-section">
+    <section id="topic-section" class="content">
         <h2> - 4. Discussion Topics -</h2>
         <ul>
             <li>Start by talking about how to make the wifi worse</li>
@@ -240,7 +196,7 @@ video recording of the meeting
 
 
     <hr>
-    <section id="misc-section">
+    <section id="misc-section" class="content">
         <h2> - 5. Miscellaneous Topics - </h2>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore recusandae iste autem voluptatem aut, cumque
             vel dignissimos dicta sint nihil consequatur asperiores nesciunt atque veniam reiciendis vero consectetur
@@ -277,12 +233,12 @@ video recording of the meeting
 
 
     <hr>
-    <section id="graph-section">
+    <section id="graph-section" class="content">
         <h2> - 6. Graph Section - </h2>
-        <h3>This is what our wifi looks like</h3>
-        <img src="media/img1.jpg" alt="Wifi Meme" width="400">
+        <p3 class="center">This is what our wifi looks like</p3>
+        <img src="media/img1.jpg" alt="Wifi Meme" width="400" class="center">
 
-        <h3>This is our solution</h3>
+        <p3 class="center">This is our solution</p3>
         <p>
             <!-- <video src="/media/vid1.mp4" alt="Never Gonna Give You Up" type="video/mp4"></video> -->
         </p>
@@ -291,7 +247,7 @@ video recording of the meeting
 
 
     <hr>
-    <section id="meeting-records">
+    <section id="meeting-records" class="content">
         <h2> - 7. Meeting Recordings - </h2>
 
         <ul>
