--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ video recording of the meeting
     <hr>
     <h2>Table of Contents</h2>
 
-    <nav>
+    <nav class="nav">
         <ol>
             <li><a href="#attendence-section">Attendence</a></li>
             <li><a href="#agenda-section">Agenda</a></li>
