--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ video recording of the meeting
 
 
     <hr>
+    <section class="big">
     <h2>Table of Contents</h2>
 
     <nav>
@@ -57,6 +58,7 @@ video recording of the meeting
             <li><a href="#meeting-records">Meeting Recordings</a></li>
         </ol>
     </nav>
+</section>
 
 
 
@@ -96,7 +98,7 @@ video recording of the meeting
             <li>Katherine Jensen</li>
             <li>Montgomery Vasquez</li>
             <li>Aiesha Elliott</li>
-            <li>Elowen Espinosa</li>
+            <li><span>Espoions Roland</span></li>
             <li>Corrina Battle</li>
             <li>Layla-Rose Farrow</li>
             <li>Amir Rojas</li>
