--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Improving School Wifi</title>
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100&display=swap" rel="stylesheet">
+    
 
 </head>
 
